增加生成代码的Codesmith模板 增加基础资料的功能

--- a/Lee.EMS/8.1.0/aspnet-core/src/Lee.EMS.Web.Host/appsettings.json
+++ b/Lee.EMS/8.1.0/aspnet-core/src/Lee.EMS.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=EMSDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EMSDb;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Encrypt=False;Trust Server Certificate=False;Command Timeout=0"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
