--- a/Lee.EMS/8.1.0/vue/package.json
+++ b/Lee.EMS/8.1.0/vue/package.json
@@ -3,7 +3,7 @@
   "version": "4.7.1",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
